scribble/scribble-assertions/src/test/resources/good/extensions/assertions/RecWithAssertions.scr
module good.extensions.assertions.RecWithAssertions;


type <java> "java.lang.integer" from "rt.jar" as int;



/*
global protocol Proto1(role A, role B)
{
rec Loop {
	choice at A {
	//[x<10]
	MSG1(x:int) from A to B;  @"(x < 10)"
	
	} or {
	//[y>10]
	MSG2(y:int) from A to B;  @"(y > 10)"
	continue Loop; 
	}
}
}
*/
global protocol Proto1(role A, role B)
{
	choice at A {
		MSG1(x:int) from A to B;  @"(x < 10)"
	}
	or
	{
		MSG2(y:int) from A to B;  @"(y > 10)"
		do Proto1(A, B); 
	}
}